--- a/forms.html
+++ b/forms.html
@@ -12,7 +12,7 @@
         <br>
         <br>
     </nav>
-    <h2>Cadastros</h2>
+    <h2>Formulário de Cadastro</h2>
     <form>
         <label for="email">E-mail:</label>
         <input id="email" type="email" placeholder="exemplo@email.com">
@@ -24,10 +24,6 @@
         <br>
         <label>Senha:</label>
         <input type="password">
-        <br>
-        <br>
-        <label>Idade:</label>
-        <input type="number" max="120" min="10">
         <br>
         <br>
         <label for="nascimento">Data de Nascimento:</label>
